# OptimalPortfolio

./: .gitignore  Dockerfile  GenPortfolio2.py  GenPortfolio3.py  GenPortfolioFromDB.py  GenRollingPortfolioFromDB.py  GenYieldCurve.py  IBData.py  MyPortfolio.xlsx  PortfolioAlpha.xlsx  README.md  list.py  pyproject.toml  requirements.txt  setup.py  verify_completeness.py
.devcontainer/: devcontainer.json
.github/workflows/: python-app.yml
backend/: Server.py  pyproject.toml
cassandra_docker/scripts/: data.cql
csv/: etf_list.csv  nikkei_225_list.csv
doc/: numpy-array.avif  python-list.avif
exercise/: Analysis.py  Exercise.py  MyNumber.py  MyPanda.py  pythonic.py
lib/: loadTickers.py  loadTiingo.py
scripts/: Beta.py  Correlation.py  EconData.py  GenPortfolio2.py  GenPortfolio3.py  GenYieldCurve.py  IBData.py  IBPanda.py  IBTest.py  RollingCorrelation.py  StockDetail.py  lsIndex.py  requirements.txt
scripts/old/: GenPortfolio.py  GenPortfolio2.py
scripts/sample/: IBFX.py  IBPanda.py  StockDetail.py  lsIndex.py
sheet/: BondValuation.xlsx  MyValuation.xlsx  PortfolioAlpha.xlsx
src/analytics/: Allocation.py  Analyzer.py  Stats.py
src/backtest/: backtest.py
src/data/: store.py
src/data/common/: CountDownLatch.py
src/data/contract/: MyContract.py
src/data/model/: daily_price.py  my_model.py
src/scripts/: IBData.py  load_div_expense.py  load_etf_list.py  load_stock_list.py
tests/: test_cassandra.py  test_cassandra_integration.py
twsapi_macunix/IBJts/: API_VersionNum.txt
twsapi_macunix/IBJts/samples/Cpp/TestCppClient/: ContractSamples.cpp  ContractSamples.h  Main.cpp  OrderSamples.cpp  OrderSamples.h  TestCppClient.cpp  TestCppClient.h  Utils.cpp  Utils.h  makefile
twsapi_macunix/IBJts/samples/Java/TestJavaClient/: ExecFilterDlg.java  ExtOrdDlg.java  OrderDlg.java  SampleFrame.java
twsapi_macunix/IBJts/samples/Java/apidemo/: ApiDemo.java  CompletedOrdersPanel.java  ContractPanel.java  OrdersPanel.java  Test.java  TicketDlg.java  TradesPanel.java
twsapi_macunix/IBJts/samples/Java/samples/rfq/: SimpleWrapper.java
twsapi_macunix/IBJts/samples/Python/Testbed/: ContractSamples.py  OrderSamples.py  Program.py  ScannerSubscriptionSamples.py  Testbed.pyproj
twsapi_macunix/IBJts/source/: ProtoBuf_readme.txt
twsapi_macunix/IBJts/source/JavaClient/: pom.xml
twsapi_macunix/IBJts/source/cppclient/: Intel_lib_build.txt
twsapi_macunix/IBJts/source/cppclient/client/: CommissionAndFeesReport.h  CommonDefs.h  Contract.h  ContractCondition.cpp  Decimal.cpp  DefaultEWrapper.cpp  DepthMktDataDescription.h  EClient.cpp  EClient.h  EClientSocket.cpp  EClientUtils.cpp  EClientUtils.h  EDecoder.cpp  EDecoder.h  EDecoderUtils.cpp  EDecoderUtils.h  EOrderDecoder.cpp  EOrderDecoder.h  EWrapper.h  EWrapper_prototypes.h  Execution.h  ExecutionCondition.cpp  ExecutionCondition.h  MarginCondition.h  Order.h  OrderCancel.h  OrderCondition.cpp  OrderCondition.h  OrderState.h  PercentChangeCondition.h  PriceCondition.cpp  PriceCondition.h  ScannerSubscription.h  TimeCondition.h  Utils.cpp  Utils.h  VolumeCondition.h  makefile
twsapi_macunix/IBJts/source/proto/: Contract.proto  Order.proto  PlaceOrderRequest.proto
ui/: Dashboard.py  PortfolioAlpha_bak.xlsx  pyproject.toml  test_window.py
(+91 files in other folders)
