[tool.poetry]
name = "OPTIMAL_PORTFOLIO"
version = "0.0.1"
description = "Optimal Portfolio"
authors = ["Raymond"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

packages = [
    { include = "analytics", from = "src" },
    { include = "data", from = "src" }
]


[tool.poetry.dependencies]
python = "^3.10"

ibapi = { path = "twsapi_macunix/IBJts/source/pythonclient", develop = true }
certifi = "^2024.2.2"
chainmap = "1.0.3"
chardet = "3.0.4"
combomethod = "1.0.12"
cycler = "0.10.0"
idna = "2.10"
joblib = "0.16.0"
kiwisolver = "1.2.0"
lxml = "^4.6.2"
matplotlib = "^3.5.0"
nulltype = "2.3.1"
numpy = "^1.21.0"
options = "1.4.10"
pandas = "2.2.0"
pandas-datareader = "0.9.0"
patsy = "1.0.1"
Pillow = "^8.0.0"
pipdeptree = "2.0.0"
pyparsing = "2.4.7"
python-dateutil = "2.8.2"
pytz = "^2022.5"
requests = "^2.31"
scikit-learn = "^1.0.2"
scipy = "^1.7.3"
seaborn = "0.11.1"
six = "1.12.0"
statsmodels = "^0.14.1"
threadpoolctl = "2.1.0"
urllib3 = "1.25.10"
cassandra-driver = "~3.25.0"
mplcursors = "^0.7"
yfinance = "^0.2.66"
yahooquery = "^2.4.1"
duckdb = "^1.4.3"
polars = "^1.36.1"


[tool.poetry.scripts]
test = 'cmd_scripts:test'

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["setuptools<65.5.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
